[workspace]
resolver = "2"
members = [
    "bevy-solana-client-common",
    "bevy-solana-client-local",
    "bevy-solana-client-wasm",
    "examples/wasm-client-example",
]

[workspace.package]
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bevy = "0.14.2"
bevy-solana-client-wasm = { path = "./bevy-solana-client-wasm" }
bevy-solana-client-common = { path = "./bevy-solana-client-common" }
log = "0.4"
serde = "1"
serde_json = "1"
