[package]
name = "bevy-solana-client-local"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
bevy-solana-client-common.workspace = true

# crates.io
anyhow.workspace = true
async-trait.workspace = true
env_logger = { version = "0.9", optional = true }
log.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt", "macros"] }
