[package]
name = "bevy-solana-client-wasm"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace
bevy-solana-client-common.workspace = true


# crates.io
anyhow.workspace = true
async-trait.workspace = true
bevy.workspace = true
log.workspace = true
gloo-net = "0.6"
js-sys = "0.3.54"
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm-logger = "0.2"
web-sys = "0.3.64"
